...
        HStack(spacing: 16) {
            NavigationLink {
                AddEntryView(journalViewModel: journalViewModel)
            } label: {
                HStack {
                    Image(systemName: "plus.circle.fill")
                    Text("Add Journal Entry")
                        .fontWeight(.semibold)
                }
                .frame(maxWidth: .infinity)
                .padding()
                .background(Color(hex: "74B9FF"))
                .foregroundColor(.white)
...

            NavigationLink {
                JournalListView()
            } label: {
                HStack {
                    Image(systemName: "list.bullet")
                    Text("View All Entries")
                        .fontWeight(.semibold)
                }
                .frame(maxWidth: .infinity)
                .padding()
                .background(Color(hex: "A29BFE"))
                .foregroundColor(.white)
...
